[tool.poetry]
name = "04-design-a-rate-limiter"
version = "0.1.0"
description = ""
authors = ["heumsi <heumsi@naver.com>"]
readme = "README.md"
packages = [{include = "04_design_a_rate_limiter"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pycln = "^2.1.2"
locust = "^2.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
