[tool.poetry]
name = "05-design-consistent-hashing"
version = "0.1.0"
description = ""
authors = ["heumsi <heumsi@naver.com>"]
readme = "README.md"
packages = [{include = "05_design_consistent_hashing"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
Faker = "^15.3.4"
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.3"
pycln = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
